--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -74,7 +74,8 @@ Report from the Office of Bückeburg
 
 *In accordance with the most gracious rescript of 24/30 December
 of last year, we hereby enclose the loan bond* drawn up for Colon
-Krückeberg, No. 10 in Berenbusch.  *Bückeburg, 12 January 1842*
+Krückeberg, No. 10 in Berenbusch.
+*Bückeburg, 12 January 1842*
 Hauck D^r^ Neuhsel Höcker *(district officer)*
 
 *R.C. (Rentkammer decision).* 
@@ -165,8 +166,9 @@ With reference to the rescript of *24 December of last year*, the
 *office is instructed* to *collect*, against receipt, the *200
 Reichstaler (courant)* loaned to the said *Krückeberg* from the
 chamber treasury and to *apply* them to the *purpose specified in
-the above rescript*†.  *Bückeburg, 20 January 1842* *By order of
-the Prince.* *(initials: Lm, L)*
+the above rescript*†.
+*Bückeburg, 20 January 1842*
+*By order of the Prince.* *(initials: Lm, L)*
 
 *[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
 
