--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -105,7 +105,8 @@ Concept
 an das Amt Bückeburg      
 
 R.        
-Wh.       
+Wh.
+v. d. d. 12. Jan. 1842 [fileing note]
           
 Expedirt Strauk
  22-1     
@@ -171,6 +172,8 @@ the above rescript*†.
 *By order of the Prince.* *(initials: Lm, L)*
 
 *[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
+[margin, small hand] v. d. d. 12. Jan. 1842 — file note repeating the
+date of the attached report.
 
 † *The enclosed bond is returned herewith*, so that, *after
 payment of the 200 thalers has been made*, the requisite
