--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -152,7 +152,24 @@ den Kammer-Acten eingeliefert.
 Der p Berger wird daher ange-
 wiesen, obige 200 Rth Cour-
 ant das Amt Bückeberg gegen
-Quit
+Quittung auszuzahlen,
+diese Verausgabung in
+Kammerrechnung gehörigen
+Orts vorzunehmen.#
+Bburg 20 Jan. 1842
+F. p.
+Lm         L
+
+#auch die Zinsen von den
+vorgeliehenen 200 Rth zu 4 p/00,
+vom Tage der Auszugung des
+Kapitalls angerechnet alljährich v[on] Krückeberg
+zu erheben u[nd] zu vernehmen.
+
+P.n.
+Das Capitalist am 25. Jan.
+1842 ausgezahlt.
+Poppelbaum
 ....
 |
 [verse]
