--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -136,7 +136,40 @@ in das Hypothekenbuch zu beschaffen, und in
 der Obligation das Nothig zu Verfügung
 und solche demnächst an der Kammer
 zu senden.
+....
+|
+[verse]
+____
+*Stamp:* 3 groschen — *re:* Chamber file no. 274.
 
+*Office Draft to the Amt Bückeburg*
+
+*Re:* Loan for Colon Krückeberg, No. 10 in Berenbusch
+
+With reference to the rescript of *24 December of last year*, the
+*office is instructed* to *collect*, against receipt, the *200
+Reichstaler (courant)* loaned to the said *Krückeberg* from the
+chamber treasury and to *apply* them to the *purpose specified in
+the above rescript*†.
+*Bückeburg, 20 January 1842*
+*By order of the Prince.* *(initials: Lm, L)*
+
+*[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
+[margin, small hand] v. d. d. 12. Jan. 1842 — file note repeating the
+date of the attached report.
+
+† *The enclosed bond is returned herewith*, so that, *after
+payment of the 200 thalers has been made*, the requisite
+particulars may be *noted beneath it*, the *entry in the mortgage
+register* arranged, and *in the bond* the *necessary note with
+reference to the order* added; *then send the same to the
+chamber*.
+____
+|===
+
+This begins on the same page, image 19-l.png toward the bottom, and ends on the last page, page 19-r.png:
+
+....
 Concept                        
 an den Kammerrentmeister      
 Berger                
@@ -167,72 +200,42 @@ Kapitalls angerechnet alljährich v[on] Krückeberg
 zu erheben u[nd] zu vernehmen.
 
 P.n.
-Das Capitalist am 25. Jan.
-1842 ausgezahlt.
-Poppelbaum
+Das Capital ist am 25. Jan.
+1842 ausgezahlt
 ....
-|
+
+Please translate to English.
 [verse]
 ____
-*Stamp:* 3 groschen — *re:* Chamber file no. 274.
+Draft
+to the Chamber Rentmaster
+Berger
 
-*Office Draft to the Amt Bückeburg*
+For the colon [tenant] Krückeberg, No. 10
+in Berenbusch, a capital
+of two hundred Reichsthaler courant
+from the Chamber treasury has been graciously
+approved, and the Amt Bückeburg has
+deposited a bond for this
+in the Chamber files.
+Rentmaster Berger is therefore
+instructed to pay out the above
+200 Rth courant to the Amt Bückeburg
+against receipt, and to enter this
+disbursement in the Chamber accounts
+in the proper place. #
+Bückeburg, 20 Jan. 1842
+[F.p.] 
+Lm     L
 
-*Re:* Loan for Colon Krückeberg, No. 10 in Berenbusch
+# Also the interest on the
+loaned 200 Rth at 4 percent,
+calculated from the day of disbursement
+of the capital, is to be collected annually
+from Krückeberg and credited [to the treasury].
 
-With reference to the rescript of *24 December of last year*, the
-*office is instructed* to *collect*, against receipt, the *200
-Reichstaler (courant)* loaned to the said *Krückeberg* from the
-chamber treasury and to *apply* them to the *purpose specified in
-the above rescript*†.
-*Bückeburg, 20 January 1842*
-*By order of the Prince.* *(initials: Lm, L)*
-
-*[margin: R.; Wh.; Dispatched: Strauk, 22 Jan.]*
-[margin, small hand] v. d. d. 12. Jan. 1842 — file note repeating the
-date of the attached report.
-
-† *The enclosed bond is returned herewith*, so that, *after
-payment of the 200 thalers has been made*, the requisite
-particulars may be *noted beneath it*, the *entry in the mortgage
-register* arranged, and *in the bond* the *necessary note with
-reference to the order* added; *then send the same to the
-chamber*.
-
-*TODO:* I have omitted the second block on text on the page, the
-2nd Concept...
+P.N.
+The capital was paid out on 25 Jan.
+1842.
+[Poppelbaum]
 ____
-|===
-
-
-== TODO: Merge this the Next and Last Page into the transliteration and translation above
-
-[NOTE]
-====
- There is some text from the left margin that I didn't yet add. It reads:
-"xdd. d. 12. Jan 1842"
-====
-
-[literal,subs="verbatim,quotes"]
-....
-[right page]                              
-Quittung auszuzahlen
-diese Verausgabung in
-Kammerrechnung gehörigen  
-Amts vorzunehnmen#
-Bburg 20 Jan. 1842
-Fp.
-Lm                 L
-
-#auch die Zinsen von der
-vorgeliehenem 200 P zu po/00
-vom Tage der Auszugung des
-Kapitalls angerechnet alljährich v Krückeberg
-zu erheben u zu vernehmen.
-
-    P.n.
-
-Das Capitalist am 25. Jan.
-1842 ausgezahlt.
-          Poppelbaum
-....
