--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -136,6 +136,39 @@ in das Hypothekenbuch zu beschaffen, und in
 der Obligation das Nothig zu Verfügung
 und solche demnächst an der Kammer
 zu senden.
+
+Concept                        
+an den Kammerrentmeister      
+Berger                
+                               
+Dem Colonn Krückeberg No 10                                  
+in Berenbusch ist ein Kapital                                
+von Zweihundert Rthl Courant                                 
+und Kammerkasse genädigst                                     
+bewilligt worden und ist                                     
+vom Amt Bückeberg hier-                                      
+über eine Obligation zu                                      
+den Kammer-Acten eingeliefert.
+Der p Berger wird daher ange-
+wiesen, obige 200 Rth Cour-
+ant das Amt Bückeberg gegen
+Quittung auszuzahlen,
+diese Verausgabung in
+Kammerrechnung gehörigen
+Orts vorzunehmen.#
+Bburg 20 Jan. 1842
+F. p.
+Lm         L
+
+#auch die Zinsen von den
+vorgeliehenen 200 Rth zu 4 p/00,
+vom Tage der Auszugung des
+Kapitalls angerechnet alljährich v[on] Krückeberg
+zu erheben u[nd] zu vernehmen.
+
+P.n.
+Das Capital ist am 25. Jan.
+1842 ausgezahlt
 ....
 |
 [verse]
@@ -164,6 +197,38 @@ particulars may be *noted beneath it*, the *entry in the mortgage
 register* arranged, and *in the bond* the *necessary note with
 reference to the order* added; *then send the same to the
 chamber*.
+
+Draft
+to the Chamber Rentmaster
+Berger
+
+For the colon [tenant] Krückeberg, No. 10
+in Berenbusch, a capital
+of two hundred Reichsthaler courant
+from the Chamber treasury has been graciously
+approved, and the Amt Bückeburg has
+deposited a bond for this
+in the Chamber files.
+Rentmaster Berger is therefore
+instructed to pay out the above
+200 Rth courant to the Amt Bückeburg
+against receipt, and to enter this
+disbursement in the Chamber accounts
+in the proper place. #
+Bückeburg, 20 Jan. 1842
+[F.p.] 
+Lm     L
+
+# Also the interest on the
+loaned 200 Rth at 4 percent,
+calculated from the day of disbursement
+of the capital, is to be collected annually
+from Krückeberg and credited [to the treasury].
+
+P.N.
+The capital was paid out on 25 Jan.
+1842.
+[Poppelbaum]
 ____
 |===
 
