--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -198,32 +198,30 @@ register* arranged, and *in the bond* the *necessary note with
 reference to the order* added; *then send the same to the
 chamber*.
 
-Draft
-to the Chamber Rentmaster
-Berger
+Draft to the Treasurer Berger
 
-For the colon [tenant] Krückeberg, No. 10
+For the tenant farmer (colon) Krückeberg, No. 10
 in Berenbusch, a capital
-of two hundred Reichsthaler courant
-from the Chamber treasury has been graciously
-approved, and the Amt Bückeburg has
+of two hundred Reichsthaler in regular currency
+from the Treasury has been graciously
+approved, and the Bückeburg Office has
 deposited a bond for this
-in the Chamber files.
-Rentmaster Berger is therefore
+in the Treasury files.
+Treasurer Berger is therefore
 instructed to pay out the above
-200 Rth courant to the Amt Bückeburg
+200 Rth courant to the Bückeburg Office
 against receipt, and to enter this
-disbursement in the Chamber accounts
-in the proper place. #
+disbursement in the Treasury accounts
+under the proper heading. #
 Bückeburg, 20 Jan. 1842
-[F.p.] 
+[F.p.]
 Lm     L
 
 # Also the interest on the
 loaned 200 Rth at 4 percent,
 calculated from the day of disbursement
 of the capital, is to be collected annually
-from Krückeberg and credited [to the treasury].
+from Krückeberg and credited to the Treasury.
 
 P.N.
 The capital was paid out on 25 Jan.
