--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -31,26 +31,20 @@ Num Pr. 1662
    ad           
 Num: Cam: 5702  
 
-Darlehn für den Colon
-Krückeberg N 10 in 
-Berenbusch betreff[end]
+Darlehn für den Colon Krückeberg N 10 in Berenbusch betreff[end]
                 
-In Gemäßheit des gnädigsten Rescripts
-24/30 December v. J. verfehlen wir nicht,
-die über das Anlehn des Colons Krücke-
-berg N. 10 in Berenbusch aufgenom-
-mene Obligation unterthänig einzu-
+In Gemäßheit des gnädigsten Rescripts 24/30 December v. J.
+verfehlen wir nicht, die über das Anlehn des Colons Krückeberg N.
+10 in Berenbusch aufgenommene Obligation unterthänig einzu-
 sanden.
 Bückeburg den 12 Januar 1842
 
 Hauck D^r^ Neuhsel Höcker 
 
 RC.
-Die Obligation wäre zu bestätigen
-und demnächst K. R. Berger mit Zahlung-
-anweisung, jedoch nicht an den 
-Krückeberg, sondern an das Amt
-zu versehe[n]. Bbg. 20. Jan 42.
+Die Obligation wäre zu bestätigen und demnächst K. R. Berger mit
+Zahlunganweisung, jedoch nicht an den Krückeberg, sondern an das
+Amt zu versehe[n]. Bbg. 20. Jan 42.
                      Ricke
 
                       vert[retend]
@@ -111,35 +105,23 @@ v. d. d. 12. Jan. 1842 [fileing note]
 Expedirt Strauk
  22-1     
 
-Darlehn für Colon
-Krückeberg No 10 in Beren-
-busch betr.
+Darlehn für Colon Krückeberg No 10 in Berenbusch betr.
 
-Unter Bezug auf das Rescript    
-vom 24 Decbr. v. J. wird das 
-Amt angeweisen, die dem p  
-Krückeberg aus Kammerkasse
-vorgeliehenen 200 rt Courant
-gegen Quittung zu erheben 
-und zu dem, im obigen Rescript
-angegebenen Zweck zu ver-
-wenden†.
+Unter Bezug auf das Rescript vom 24 Decbr. v. J. wird das Amt
+angeweisen, die dem p  Krückeberg aus Kammerkasse vorgeliehenen
+200 rt Courant gegen Quittung zu erheben und zu dem, im obigen
+Rescript angegebenen Zweck zu verwenden†.
 Bburg 20 Jan 1842
 F. p.
 Lm                  L
 
-†Die übersandte Schuldverschreibung
-erfolgt hiebeÿ zurück, um nach geschehener
-Bezahlung d. 200 D. darunter das
-Erforderliche zu bemerken, die Eintragung
-in das Hypothekenbuch zu beschaffen, und in
-der Obligation das Nothig zu Verfügung
-und solche demnächst an der Kammer
-zu senden.
+†Die übersandte Schuldverschreibung erfolgt hiebeÿ zurück, um
+nach geschehener Bezahlung d. 200 D. darunter das Erforderliche
+zu bemerken, die Eintragung in das Hypothekenbuch zu beschaffen,
+und in der Obligation das Nothig zu Verfügung und solche
+demnächst an der Kammer zu senden.
 
-Concept                        
-an den Kammerrentmeister      
-Berger                
+Concept an den Kammerrentmeister Berger                
                                
 Dem Colonn Krückeberg No 10 in Berenbusch ist ein Kapital von
 Zweihundert Rthl Courant und Kammerkasse genädigst
