--- a/modules/689/pages/doc-07.adoc
+++ b/modules/689/pages/doc-07.adoc
@@ -20,29 +20,18 @@ an das Amt Bückeburg
 [cap Bhösselnd  
 29/12]          
 
-Darlehn für den Colon                 
-Krückeberg No 10 in Be-
-renbusch betr:
+Darlehn für den Colon Krückeberg No 10 in Berenbusch betr:
 
-Um den Colon Krückeberg Nr. 10                          
-in Berenbusch, wegen der an                             
-Hempel Söhne in Minden zu                               
-zahlenden Schulden, zu helfen,                          
-haben Serenissimus Regens
-demselben ein Darlehn von 200 r.                       
-zu 4% Zinsen und halbjähriger                           
-Löse aus Kammerkasse zu be-                            
-willigen geruht. Das Amt wird                           
-daher beauftragt, die behufige[misspelled:
-behufliche preferred]
-Obligation, worin auch in specie                        
-wegen Sicherheit des Darlehns,                          
-das Nöthige aufzunehmen ist,                            
-einzusenden, welchem nächst die Aus-                    
-wahlung der 200 r. aus Amt,                             
-und solches Geld gehörig zu ver-                        
-wenden, verfügt werden soll.                            
-Suppl: ist hiervon in Kenntniß zu setzen.               
+Um den Colon Krückeberg Nr. 10 in Berenbusch, wegen der an Hempel
+Söhne in Minden zu zahlenden Schulden, zu helfen, haben
+Serenissimus Regens demselben ein Darlehn von 200 r.  zu 4%
+Zinsen und halbjähriger Löse aus Kammerkasse zu bewilligen
+geruht. Das Amt wird daher beauftragt, die behufige[misspelled:
+behufliche preferred] Obligation, worin auch in specie wegen
+Sicherheit des Darlehns, das Nöthige aufzunehmen ist,
+einzusenden, welchem nächst die Auswahlung der 200 r. aus Amt,
+und solches Geld gehörig zu verwenden, verfügt werden soll.
+Suppl: ist hiervon in Kenntniß zu setzen.
 Bburg 24. Dibr 1841.
 Fürstl: p.
 
