--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -20,21 +20,16 @@
 ....
 Ad NC 5587                   6
 
-Da nach dem Bericht des O. f.
-Kreuzingers das Land des Krückeberg
-weder durch Lage noch durch Qualität
-sich zum Ankauf für die Herrschaft
-eignet, so wird Krückeberg wiederholt
+Da nach dem Bericht des O. f. Kreuzingers das Land des
+Krückeberg weder durch Lage noch durch Qualität sich zum Ankauf
+für die Herrschaft eignet, so wird Krückeberg wiederholt
 abschlägig zu bescheiden seÿn.
 
-Die einzige Art wie ihm vielleicht noch
-zu helfen wäre, müsste seÿn, wenn die
-Kammer sich veranlaßt sehen wollte, das
-fragliche Land zu demselben Preise
-zurückzukaufen für welchen es dem Krü-
-ckeberg verkauft ist. Dieß ist aber das
-Doppelte von dem von p Kreutzinger ein-
-gegebnen Werthe.
+Die einzige Art wie ihm vielleicht noch zu helfen wäre, müsste
+seÿn, wenn die Kammer sich veranlaßt sehen wollte, das fragliche
+Land zu demselben Preise zurückzukaufen für welchen es dem Krü-
+ckeberg verkauft ist. Dieß ist aber das Doppelte von dem von p
+Kreutzinger ein- gegebnen Werthe.
 Bbg 16. Decbr 41
 
 
