--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -38,108 +38,77 @@ NC. 5587                    pr in Cam 11 Dec 1841
                          Grundstück betreffend
 
 
-Dem vor Fürstlicher Rentkammer
-erhaltenen Aufträge zufolge, habe
-ich das Grundstück, von welchen in dem
-vom Colon Krückeberg unterem 21ten v. M.
-sub N. C. 5263 bei Fürstlicher Rentkammer
-eingereichten Gesuch Erwähnung ge-
-schieht, an Ort und Stelle in Augen
-schein genommen und füge ich von
-der Lage dieses Grundstücks hier
-eine Situations-Zeichnung bei.
-Das Grundstück hält nach Anga-
-be des Krückeberg 9 Morgen 19 Ruthen
-wovon 8 Morgen 90 Ruthen im Jahr
-1814 von der herrschaftlichen Söhr-
-Weide und 49 Ruthen im Jahr 1818
-vom Forstgründe angekauft sind,
-und sind bisher hiervon 8 1/2 Morgen
-als Saatland und das übrige
-als Wiese benutzt worden.
-Das Grundstück hat einen
-schweren thonigten Boden, der als
-mittelmässig von Güte anzunehmen
-wäre, wenn solcher nicht oft Über-
-schwemmungen ausgesetzt seÿ und
-zwar, sobald die Aue austritt staut
-das Wasser von der Neubenau bei
-Evesen herauf auf die, auf der Söhre
-belegenen Grundstücke und weil
-von hieraus kein weiteres Gefälle
-ist, muß das Waßer, nachdem
-die Nebenaue wieder in ihre
-Ufer zurück getreten ist, denselben
-Weg von den Söhr-Grundstücken
-wieder nach Evesen zurück nehmen.
-Nach der Aussage mehrerer
-Einwohner in Berenbusch und Nord-
-holz haben Krückeberg auf diesen
-Grundstücke bei trockenen Jahren
-sehr starkes Korn geerntet, dage-
-gen bei nassen Jahren, oftmalen
-auch nicht die Einsaat wieder
-bekommen.
-Ich glaube zwar, daß die auf
-der Söhre belegenen Grundstücke
-im allgemeinen sehr verbessert
-werden könnten und zwar dadurch
-daß von diesen Grundstücken ein
-vielleicht 6 bis 8 Fuß tiefer Canal
-nach der Flakenbrücke gezogen
-würde, der bei Überschwemmungen
-das Wasser ab und in den Canal
-bei der Flakenbrücke führte
-wenigstens scheint dahin Gefälle zu sein.
-Nach meiner Beurtheilung und
-auch nach dem Urtheile Sachverständiger
-Landwirthe, ist der Werth von diesem
-Grundstücke der Morgen nicht höher
-als zu 50 Rthl zu veranschlagen und
-hat Krückeberg daher solches im Jahr
-1814 zu einem viel zu hohen Preise
-angekauft.
-Dieses Grundstück, auch selbst für
-den vorbenannten Preis von 50 Rthl p Morgen
-für herrschaftliche Rechnung anzukaufen,
-und für die Folge zu benutzen, möchte
-nach meinen Dafürhalten nicht im
-herrschaftlichen Interesse liegen,
-weil solches in keiner Hinsicht vor-
-theilhaft benutzt werden kann und zwar
-1), solches als Saatlanderey zu benutzen,
-ist das Grundstück den herrschaftlichen
-Meÿereÿen zu weit entfernt und
-bei einer Verpachtung wird, wegen
-der nassen Beschaffenheit des Bodens,
-schwerlich mehr den 2 Rtl Pacht pro Mor-
-gen gebothen werden.
-2), solches als Wiese zu benutzen, wird
-auch kein höherer Ertrag bewirkt
-werden, wenigstens liefert die an
-dieses Grundstück stossende Söhr-Weide
-auch nur sehr schlechtes Heu, als Folge
-des zu nassen Bodens und endlich
-3), solches mit Holz anzubauen ist
-eben so wenig vortheilhaft und
-zwar weil die Entwässerung sehr
-kostspielig werden würde und außer-
-dem greift dieses Grundstück auch
-in die neben liegenden Grund-
-stücke hinein.
-Der Schuldenzustand des Krück-
-berg gestattet, denselben auch nicht,
-das erwähnte Grundstück für einen
-so billigen Preis verkaufen zu
-dürfen, wenigstens wurde denselben
-mit dem Verkaufe desselben nur
-für eine kurze Zeit geholfen sein,
-und mehr als 50 Rthl pro Morgen
-dafür zu entrichten, kann nur
-in der Absicht sich begründen,
-den Supplicanten aus seiner
-misslichen Lage zu befreien.
+Dem vor Fürstlicher Rentkammer erhaltenen Aufträge zufolge, habe
+ich das Grundstück, von welchen in dem vom Colon Krückeberg
+unterem 21ten v. M. sub N. C. 5263 bei Fürstlicher Rentkammer
+eingereichten Gesuch Erwähnung geschieht, an Ort und Stelle in
+Augen schein genommen und füge ich von der Lage dieses
+Grundstücks hier eine Situations-Zeichnung bei.
+
+Das Grundstück hält nach Angabe des Krückeberg 9 Morgen 19 Ruthen
+wovon 8 Morgen 90 Ruthen im Jahr 1814 von der herrschaftlichen
+Söhr- Weide und 49 Ruthen im Jahr 1818 vom Forstgründe angekauft
+sind, und sind bisher hiervon 8 1/2 Morgen als Saatland und das
+übrige als Wiese benutzt worden.
+
+Das Grundstück hat einen schweren thonigten Boden, der als
+mittelmässig von Güte anzunehmen wäre, wenn solcher nicht oft
+Überschwemmungen ausgesetzt seÿ und zwar, sobald die Aue austritt
+staut das Wasser von der Neubenau bei Evesen herauf auf die, auf
+der Söhre belegenen Grundstücke und weil von hieraus kein
+weiteres Gefälle ist, muß das Waßer, nachdem die Nebenaue wieder
+in ihre Ufer zurück getreten ist, denselben Weg von den
+Söhr-Grundstücken wieder nach Evesen zurück nehmen.
+
+Nach der Aussage mehrerer Einwohner in Berenbusch und Nor holz
+haben Krückeberg auf diesen Grundstücke bei trockenen Jahren sehr
+starkes Korn geerntet, dagegen bei nassen Jahren, oftmalen auch
+nicht die Einsaat wieder bekommen.
+
+Ich glaube zwar, daß die auf der Söhre belegenen Grundstücke im
+allgemeinen sehr verbessert werden könnten und zwar dadurch daß
+von diesen Grundstücken ein vielleicht 6 bis 8 Fuß tiefer Canal
+nach der Flakenbrücke gezogen würde, der bei Überschwemmungen das
+Wasser ab und in den Canal bei der Flakenbrücke führte wenigstens
+scheint dahin Gefälle zu sein.
+
+Nach meiner Beurtheilung und auch nach dem Urtheile
+Sachverständiger Landwirthe, ist der Werth von diesem Grundstücke
+der Morgen nicht höher als zu 50 Rthl zu veranschlagen und hat
+Krückeberg daher solches im Jahr 1814 zu einem viel zu hohen
+Preise angekauft.
+
+Dieses Grundstück, auch selbst für den vorbenannten Preis von 50
+Rthl p Morgen für herrschaftliche Rechnung anzukaufen, und für
+die Folge zu benutzen, möchte nach meinen Dafürhalten nicht im
+herrschaftlichen Interesse liegen, weil solches in keiner
+Hinsicht vortheilhaft benutzt werden kann und zwar
+
+1. solches als Saatlanderey zu benutzen, ist das Grundstück den
+herrschaftlichen Meÿereÿen zu weit entfernt und bei einer
+Verpachtung wird, wegen der nassen Beschaffenheit des Bodens,
+schwerlich mehr den 2 Rtl Pacht pro Morgen gebothen werden.
+
+2. solches als Wiese zu benutzen, wird auch kein höherer Ertrag
+bewirkt werden, wenigstens liefert die an dieses Grundstück
+stossende Söhr-Weide auch nur sehr schlechtes Heu, als Folge des
+zu nassen Bodens und endlich
+
+3. solches mit Holz anzubauen ist eben so wenig vortheilhaft und
+zwar weil die Entwässerung sehr kostspielig werden würde und
+außerdem greift dieses Grundstück auch in die neben liegenden
+Grundstücke hinein.
+
+Der Schuldenzustand des Krückberg gestattet, denselben auch
+nicht, das erwähnte Grundstück für einen so billigen Preis
+verkaufen zu dürfen, wenigstens wurde denselben mit dem Verkaufe
+desselben nur für eine kurze Zeit geholfen sein, und mehr als 50
+Rthl pro Morgen dafür zu entrichten, kann nur in der Absicht sich
+begründen, den Supplicanten aus seiner misslichen Lage zu
+befreien.
+
 Baum d 10ten Decbr 1841.
+
 [Creuzinger]
 ....
 
@@ -204,6 +173,7 @@ price; at best the sale would help only briefly.  Paying more than 50 Rthl per
 Morgen could only be justified by the wish to relieve the petitioner from his
 difficult situation.
 
+Baum Dec. 10, 1841.
 
 [Creuzinger]
 ____
