--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -90,7 +90,10 @@ müssen für meines Eltern Schuld annehmen, in Liefster ehsfurcht
 richte nochmals in Festen vertraun zu einer Durchlauten meine
 untertähnigste Bitte und Trost und bei stand zu erlangen, weill
 ich sonst Genß verlassen bin, und unverschuldet zu grunde gehen
-Miß, Untertänigster Colon Krückeberg Nro 10 in Berenbusch
+Miß,
+
+Untertänigster Colon Krückeberg
+Nro 10 in Berenbusch
 d 21ten November
 1841
 ....
