--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -179,20 +179,13 @@ davon ab Schulden.____________700 -
                bleibt Werth   825 rt
 
 
-Sollte die Stelle zum Verkauf kommen,
-so möchte es immer noch zur Frage
-kommen, ob nach Abrechnung der
-Lasten für das erbetene Dar-
-lehn von 200 rt Deckung erfolgen
-würde. Obgleich nicht zu leugnen,
-daß schon Darlehen unter noch
-misslicheren Verhältnissen be-
-willigt worden sind, so mag
-ich ein solches doch nicht be[für-
-worten] und kaum daher die
-Bewilligung oder Verweigerung
-lediglich dem Ermessen der Cam-
-mer anheimgeben.
+Sollte die Stelle zum Verkauf kommen, so möchte es immer noch zur
+Frage kommen, ob nach Abrechnung der Lasten für das erbetene Dar-
+lehn von 200 rt Deckung erfolgen würde. Obgleich nicht zu
+leugnen, daß schon Darlehen unter noch misslicheren Verhältnissen
+bewilligt worden sind, so mag ich ein solches doch nicht be[für-
+worten] und kaum daher die Bewilligung oder Verweigerung
+lediglich dem Ermessen der Cammer anheimgeben.
 Bbg 15. Novbr 41.
               [Ricke/Rietz]
 
