--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -43,46 +43,40 @@ b.m. zum Amtsbericht
 B. 4 Oct 41
 [Samg/Spreng]
 
-      Mein verstorbener Vater und nach dessen Tode
-auch meine Mutter, die das Handwerk meines Va-
-ters, eines Schuhmachers, fortsetzte, haben bei den Kauf-
-leuten und Gerber Hempel Söhne in Minden eine
-bedeutende Lederschuld gewirkt, die jetzt mit Zinsen
-gegen mich ausgeklagt ist, und derentwegen, wie
-anliegender Bescheid des Amts bekundet, ich mit Aus-
-pfandung bedroht bin. Mir ist es unmöglich, diese ganze
-Summe aus eigenen vorräthiger Mitteln zu be-
-zahlen, und ich weiß mich nicht anders zu helfen, als
-durch ein neues Darlehn von 150 Rthl und die Er-
-langung der Vergünstigung, den Rest in jährlichen
-Terminen von 5 Rthlr abtragen zu können. Auf
-meiner
+Mein verstorbener Vater und nach dessen Tode auch meine Mutter,
+die das Handwerk meines Vaters, eines Schuhmachers, fortsetzte,
+haben bei den Kaufleuten und Gerber Hempel Söhne in Minden eine
+bedeutende Lederschuld gewirkt, die jetzt mit Zinsen gegen mich
+ausgeklagt ist, und derentwegen, wie anliegender Bescheid des
+Amts bekundet, ich mit Auspfandung bedroht bin. Mir ist es
+unmöglich, diese ganze Summe aus eigenen vorräthiger Mitteln zu
+bezahlen, und ich weiß mich nicht anders zu helfen, als durch ein
+neues Darlehn von 150 Rthl und die Erlangung der Vergünstigung,
+den Rest in jährlichen Terminen von 5 Rthlr abtragen zu können.
+Auf meiner
 
 Nrpr: 127. [end of first page]
 
-meiner Stätte haften zwar schon 700 Rthl consentirter
-Schulden, allein ich kann mir nicht anders helfen, so
-ungern ich auch noch meine Zinsen last vergrößern.
-Ew. Durchlaucht muß ich daher unterthänigst
-bitten:
+meiner Stätte haften zwar schon 700 Rthl consentirter Schulden,
+allein ich kann mir nicht anders helfen, so ungern ich auch noch
+meine Zinsen last vergrößern.  Ew. Durchlaucht muß ich daher
+unterthänigst bitten:
 
-mir gnädigst den Consens zu einem
-neuen Anlehn von 150 Rthl zu
-ertheilen und dann zu verfügen
-daß ich der Rest der unconfendirten
-Hempelischen Forderung in jährlichen
-terminen von 5 Rthlr abträgen
-könne.
+mir gnädigst den Consens zu einem neuen Anlehn von 150 Rthl zu
+ertheilen und dann zu verfügen daß ich der Rest der
+unconfendirten Hempelischen Forderung in jährlichen terminen von
+5 Rthlr abträgen könne.
 
 In tiefster Ehrfurcht ersterbend
 
 Ew. Durchlaucht
 
+unterthänigster,
+Colen Krückeberg
+Nr 10 in Berenbusch.                           
 
-
-                           unterthänigster,
-Buckeburg                  Colen Krückeberg
-d. 2ten Ditto. 1841.       Nr 10 in Berenbusch.
+Buckeburg                  
+d. 2ten Ditto. 1841.       
 Conc. GWFuchs.
 Nro g d.
 ....
@@ -107,35 +101,28 @@ Bückeburg, 4 Oct 1841.
 [Samg/Spreng]
 
 
-      My late father, and after his death also my mother,
-who continued my father’s trade as a shoemaker, have
-incurred with the merchants and tanner firm Hempel
-Sons in Minden a considerable leather debt, which,
-with interest, has now been claimed from me in court,
-and on account of which, as the enclosed decision of
-the Amt shows, I am threatened with distraint
-[the legal seizure of property to compel payment].
-It is impossible for me to pay this entire sum from
-my own available means, and I know no other way
-to help myself than through a new loan of 150
-Reichstaler, and obtaining the privilege of being able
-to repay the remainder in annual installments of
-5 Reichstaler. On my
+My late father, and after his death also my mother, who continued
+my father’s trade as a shoemaker, have incurred with the
+merchants and tanner firm Hempel Sons in Minden a considerable
+leather debt, which, with interest, has now been claimed from me
+in court, and on account of which, as the enclosed decision of
+the Amt shows, I am threatened with distraint [the legal seizure
+of property to compel payment].  It is impossible for me to pay
+this entire sum from my own available means, and I know no other
+way to help myself than through a new loan of 150 Reichstaler,
+and obtaining the privilege of being able to repay the remainder
+in annual installments of 5 Reichstaler. On my
 
 No. pr: 127. [end of first page]
 
-property there already rest 700 Reichstaler of secured
-debts, yet I can find no other remedy, however
-reluctantly I may still increase my interest burden.
-I must therefore most humbly
+property there already rest 700 Reichstaler of secured debts, yet
+I can find no other remedy, however reluctantly I may still
+increase my interest burden. I must therefore most humbly request:
 
-request:
-
-that Your Serene Highness graciously grant me
-consent to a new loan of 150 Reichstaler,
-and then decree that I may repay the
-remainder of the unconsented Hempel claim
-in annual installments of 5 Reichstaler.
+that Your Serene Highness graciously grant me consent to a new
+loan of 150 Reichstaler, and then decree that I may repay the
+remainder of the unconsented Hempel claim in annual installments
+of 5 Reichstaler.
 
 Remaing in the deepest reverence,
 
