--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -72,77 +72,62 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
                        in Berenbusch um Anlehnswesens   
                        Betr:
 
-    Auf die anbei zurückerfolgende Bittschrift des Colons
-    Kruckeberg N. 10 in Berenbusch verfehlen wir
-    nicht Nachfolgendes zu berichten.
+Auf die anbei zurückerfolgende Bittschrift des Colons Kruckeberg
+N. 10 in Berenbusch verfehlen wir nicht Nachfolgendes zu
+berichten.
 
-    Es hat seine Richtigkeit, dass Hempel Söhne in
-    Minden gegen den Supplicanten die Summe von
-    133 r 7 mg nebst Zinsen zu 5% vom Jahre 1833
-    an welche Schuld von seinen Eltern annoch her-
-    rührt, ausgeklagt haben, und ist auf den
-    Antrag der Kläger gegen den p. Krückeberg
-    auf die genannte Summe und auf 27 mg Centu-
-    macialkosten bereits unter 8 v.M die Auspfan-
-    dung erkannt worden.
+Es hat seine Richtigkeit, dass Hempel Söhne in Minden gegen den
+Supplicanten die Summe von 133 r 7 mg nebst Zinsen zu 5% vom
+Jahre 1833 an welche Schuld von seinen Eltern annoch herrührt,
+ausgeklagt haben, und ist auf den Antrag der Kläger gegen den p.
+Krückeberg auf die genannte Summe und auf 27 mg Centu-
+macialkosten bereits unter 8 v.M die Auspfandung erkannt
+worden.
 
-    Nach unserem unvorgreiflichen Dafürhalten
-    ist kein Rechtsgrund vorhanden, in Folge dessen
-    p. Kruckeberg auf Anordung von Termins-
-    zahlungen hinsichtlich eines Theiles der von
-    Hempel Söhne ausgeklagten Forderung 
-    Anspruch machen könnte, und haben wir die feste
-    Überzeugung, daß sich Hempel Söhne, welche in
-    dem seit den 30ten Juli 1836 gegen Krücke-
-    berg anhängigen, zwei Mal in appellatorio
-    und ein Mal in Supplicatorio verhandelten
-    Rechtsstreite bedeutende Kosten gehabt haben,
-    in keiner Weise dazu verstehen werden, dem
-    Colon Krückeberg theilweise eine terminliche
-    Abtragung zu gestatten.
+Nach unserem unvorgreiflichen Dafürhalten ist kein Rechtsgrund
+vorhanden, in Folge dessen p. Kruckeberg auf Anordung von
+Terminszahlungen hinsichtlich eines Theiles der von Hempel
+Söhne ausgeklagten Forderung Anspruch machen könnte, und haben
+wir die feste Überzeugung, daß sich Hempel Söhne, welche in dem
+seit den 30ten Juli 1836 gegen Krückeberg anhängigen, zwei Mal
+in appellatorio und ein Mal in Supplicatorio verhandelten
+Rechtsstreite bedeutende Kosten gehabt haben, in keiner Weise
+dazu verstehen werden, dem Colon Krückeberg theilweise eine
+terminliche Abtragung zu gestatten.
 
-    Im Übrigen erscheint es uns nothwendig, daß
-    der genannte Colon Krückeberg ein Anlehen
-    contrahire, um seine Schuld abtragen zu
-    können, und wird er dazu eines Anlehens
-    vom 190 rt bedürfen, waren nach Abtragung
-    der Schuld nur ein kleiner Rest übrig bleiben
-    wird, welchen er zur Deckung der auf seiner
-    Seite erwachsenen Proceßkosten mit ver-
-    wenden mag.
+Im Übrigen erscheint es uns nothwendig, daß der genannte Colon
+Krückeberg ein Anlehen contrahire, um seine Schuld abtragen zu
+können, und wird er dazu eines Anlehens vom 190 rt bedürfen,
+waren nach Abtragung der Schuld nur ein kleiner Rest übrig
+bleiben wird, welchen er zur Deckung der auf seiner Seite
+erwachsenen Proceßkosten mit verwenden mag.
 
-    Die zur Stätte des Colons Krückeberg N 10.
-    in Berenbusch gehörigen Landereien sind 10
-    Morgen 30 Ruthen groß und sind die Hofs-
-    gebäude zu 525 rt assecurirt. An unseren-
-    tirten Schulden haften auf der genannten
-    Stätte 700 r.
+Die zur Stätte des Colons Krückeberg N 10. in Berenbusch
+gehörigen Landereien sind 10 Morgen 30 Ruthen groß und sind die
+Hofs- gebäude zu 525 rt assecurirt. An unseren- tirten Schulden
+haften auf der genannten Stätte 700 r.
 
-    Für ein Anlehen von 190 rt würde dem
-    nach die Stätte das p Krückeberg nach hinreichende
-    Sicherheit gewähren.
+Für ein Anlehen von 190 rt würde dem nach die Stätte das p
+Krückeberg nach hinreichende Sicherheit gewähren.
 
-    Aus Grund des Vorgetragenen stellen wir den
-    unterthänigsten Antrag: den Colon Krückeberg
-    durch uns auf seine Vorstellung dahin beschei-
-    den lassen zu wollen, daß sein Gesuch, einen
-    Theil der Forderung der Hämpel Söhne
-    in Minden terminlich abtragen zu dürfen,
-    nicht statt finden könne, ihm jedoch gestattet
-    werden solle, behuf Berichtigung solcher For-
-    derung ein Anlehen von 190 rt aufzunehmen.
+Aus Grund des Vorgetragenen stellen wir den unterthänigsten
+Antrag: den Colon Krückeberg durch uns auf seine Vorstellung
+dahin beschei- den lassen zu wollen, daß sein Gesuch, einen Theil
+der Forderung der Hämpel Söhne in Minden terminlich abtragen zu
+dürfen, nicht statt finden könne, ihm jedoch gestattet werden
+solle, behuf Berichtigung solcher Forderung ein Anlehen von 190
+rt aufzunehmen.
 
-    Schließlich bemerken wir noch, daß wir die
-    Vollziehung der gegen Krückeberg erkannten
-    Auspfandung einstweilen sistirt haben
-    Bückeburg den 7t October 1841.
+Schließlich bemerken wir noch, daß wir die Vollziehung der gegen
+Krückeberg erkannten Auspfandung einstweilen sistirt haben
+Bückeburg den 7t October 1841.
 
-    Hauck D^r^ Neuhsel, Höcker
+Hauck D^r^ Neuhsel, Höcker
 
-    R[ent]C[ammer]. rescrib: Das Amt habe
-    wie angetragen den
-    Krückeberg zu bescheiden.
-    B. 14. Oct. 1841
+R[ent]C[ammer]. rescrib: Das Amt habe
+wie angetragen den
+Krückeberg zu bescheiden.
+B. 14. Oct. 1841
 
     Spring
     acting on behalf of [the Amt/Cammer] 
