--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -50,6 +50,7 @@ bald das Geld herbeischaffe. In dieser schrecklichen Be-
 drängniß weiß ich mich nirgends mehr hinzuwenden als
 an Ew. Durchlaucht in der Hoffnung, das benöthigte An-
 lehn von 200 rt aus der Kammerkasse zu erhalten.
+
 Wenn ich auch nur auf ein Jahr dieses Anlehn erhalte,
 so habe ich doch dann Muße, mich nach dem Umlehn ge-
 hörig umzusehen, und werde es bis dahin wohl das
@@ -62,14 +63,12 @@ sam dar.
 Eure Durchlaucht bitte ich daher so dringend als unter-
 thänigst:
 
-          mir das benöthigte Darlehn von 200 rt aus
-          der Kammerbasse gegen gerichtliche Obliga-
-          tion gnädigst zu bewilligen.
+mir das benöthigte Darlehn von 200 rt aus der Kammerbasse gegen
+gerichtliche Obligation gnädigst zu bewilligen.
 
 In tiefster Ehrfurcht ersterbend
 
                         Eure Durchlaucht
-
 
 
 
